--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="card" style="width: 30rem;">
                   <!-- CARD -->
                   <div class="card-header">
-                    <h3 class="card-title text-center">Prio Tool test</h3>
+                    <h3 class="card-title text-center">Prio Tool</h3>
                     <h6 class="card-subtitle text-center mb-2 text-muted">A nifty tool for the Integration Specialists</h6>
                   </div>
                     <div class="card-body">
